fixing the gap

--- a/resume.css
+++ b/resume.css
@@ -8,14 +8,11 @@ body{
     
 }
 
-.top-panel-horizontal{
+.top-panel-horizontal {
     display: flex;
-    justify-content: center;
-    
-    /* lets test the height needed */
-    height: 280px;
-    margin-top: 30px;
-
+    align-items: center;
+    justify-content: space-between;
+    margin:0% 20%;
 }
 
 .profile-pic img {
@@ -65,6 +62,8 @@ p.about{
 .intro {
     display: flex;
     flex-direction: column; /* Ensure a vertical flex container for proper alignment */
+    flex: 1; /* Allow the "intro" section to take up remaining space */
+    margin-right: 20px;
 }
 
 a.download-link {
@@ -89,7 +88,8 @@ a.download-link:hover{
 }
 
 .experience{
-    margin-left: 430px;
+    margin:0% 20%;
+    margin-top: 20px;
 }
 
 .experience-list{
